# mcp-server

./: .dockerignore  .env.example  .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  AGENTS.md  CLAUDE.md  Dockerfile  LICENSE  README.md  TP-MCP-Server.md  app_streamlit.py  client_langchain.py  main.py  pyproject.toml  review.md
server/: app.py  main.py
server/core/: __init__.py  config.py
server/services/: __init__.py  core.py  crossref.py  orcid.py  semantic_scholar.py  sum.py  test.py
server/tools/: __init__.py  core.py  crossref.py  orcid.py  semantic_scholar.py  sum.py
server/utils/: __init__.py  http.py  runtime.py
tests/: conftest.py  test_config.py  test_contract.py  test_integration.py
tests/services/: test_crossref.py  test_orcid.py  test_semantic_scholar.py  test_sum.py
tests/tools/: test_core.py  test_crossref.py  test_orcid.py  test_semantic_scholar.py  test_sum.py
